build(Dockerfile): enable running a wandb experiment by passing env variable

--- a/env.yml
+++ b/env.yml
@@ -2,9 +2,9 @@ name: base
 channels:
   - conda-forge
 dependencies:
-  - python>=3.9
+  - python>=3.11
   - pytorch
   - torchvision
   - pytorch-lightning
-  - lightning
+  - lightning==2.0.1
   - wandb
