--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,10 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: docker_build_image
-        run: docker build -t hello_world .
+        run: docker build -t train .
 
       - name: docker_run_container
-        run: docker run hello_world
-
-      - name: display_output
-        run: echo "${{ steps.docker_run_container.outputs.output }}"
+        run: docker run -e WANDB_USER_NAME=${{ secrets.WANDB_USER_NAME }} -e WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} train
