build(.github/workflows/test_model.yml): Add and keyword to combine issue_comment and pull_request event triggers

--- a/.github/workflows/test_model.yml
+++ b/.github/workflows/test_model.yml
@@ -16,10 +16,13 @@
 name: Trigger Model Testing On Comment
 
 on:
-  issue_comment:
-    types: [created]
-    body:
-      - /test
+  and:
+    - issue_comment:
+        types: [created]
+        body: /test
+    - pull_request:
+        branches:
+          - current
 
 jobs:
   model-testing:
