build(.github/workflows/test_model.yml): and is not a valid gh action arh

--- a/.github/workflows/test_model.yml
+++ b/.github/workflows/test_model.yml
@@ -16,13 +16,11 @@
 name: Trigger Model Testing On Comment
 
 on:
-  and:
-    - issue_comment:
-        types: [created]
-        body: /test
-    - pull_request:
-        branches:
-          - current
+  issue_comment:
+    body: /test
+  pull_request:
+    branches:
+      - current
 
 jobs:
   model-testing:
