--- a/.github/workflows/test_model.yml
+++ b/.github/workflows/test_model.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Docker Build Image
         run: docker build -t eval .
 
-      - name: Docker Train & Test Model
+      - name: Docker Evaluate Model
         run: docker run -e WANDB_USER_NAME=${{ secrets.WANDB_USER_NAME }} -e WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} eval
