--- a/.github/workflows/test_model.yml
+++ b/.github/workflows/test_model.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Docker Evaluate Model
         run: docker run -e WANDB_USER_NAME=${{ secrets.WANDB_USER_NAME }} -e WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} eval
 
-      # Comment results to PR
+      # Comment test results on PR
       - name: Comment test results on PR
-        uses: thollander/actions-comment-pull-request@v3
+        uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: ./../../test_results.md
