--- a/.github/workflows/test_model.yml
+++ b/.github/workflows/test_model.yml
@@ -24,8 +24,12 @@ jobs:
       - name: Docker Evaluate Model
         run: docker run -e WANDB_USER_NAME=${{ secrets.WANDB_USER_NAME }} -e WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} eval
 
+      # Read results from local folder
+      - name: Read results from local folder
+        run: python .github/workflows/json_to_md.py results/test_results.json results/test_results.md
+
       # Comment test results on PR
       - name: Comment test results on PR
         uses: thollander/actions-comment-pull-request@v2
         with:
-          filePath: ./../../test_results.md
+          filePath: results/test_results.md
