--- a/.github/workflows/test_model.yml
+++ b/.github/workflows/test_model.yml
@@ -10,6 +10,8 @@ on:
     branches:
       - main
 
+permissions: write-all
+
 jobs:
   build-and-run:
     runs-on: ubuntu-latest
@@ -36,5 +38,3 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           filePath: volume/test_results.md
-          message: 'Model test results are in'
-          GITHUB_TOKEN: ${{ secrets.PAT }}  # replace PAT with your personal access token secret name
